app/assets/stylesheets/_stories.scss
// Place all the styles related to the Stories controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/
$primaryYellow: #FFC017;
$primaryBlue: #174BFF;
$primaryFont: Newsreader;

div.topics-container {
  display: flex;
  justify-content: center;
  margin: 0 0 4rem 0;


  nav.topics {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 50vw;

    a {
      color: black;
      text-decoration: none;
      &.active {
        color: $primaryYellow;
      }
    }
    div.topic-btn {
      margin: 0 0.5rem 0.5rem 0.5rem;
      border-color: $primaryYellow;
      transition: 0.5s;
      //background-color: black;
    }
    .topic-btn:hover {
      background-color: $primaryYellow;
      border-color: $primaryYellow;
      transition: 0.5s;
      a {
        color: $primaryBlue;
      }
    }
  }
}


// Story SHOW
.story-header-img {
  //width: 100%;
}

img.story-header-img {
  height: 30vh;
  object-fit: cover;
  width: 100%;
}

.story-header-img-wrapper {
  height: 100%;
}

.story-show-container {
  display: flex;
  justify-content: center;
  margin: 3rem;

  .story-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    // padding: 0 14vw 0 14vw;

    .story-content-container {
      display: flex;
      flex-direction: row;
      justify-content: center;
    }

    .story-content {
      max-width: 60vw;

      h1 {
        display: flex;
        justify-content: center;
        margin-bottom: 0;
      }

      p {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin: 0 8rem 0 8rem;
      }

      .written-by {
        display: flex;
        justify-content: center;
        margin-bottom: 1em;

        h3 {
          color: #484848;
        }

        a {
          color: black;
          text-decoration: none;
        }
      }
    }

    .story-actions {
      display: flex;
      justify-content: space-evenly;
      margin-top: 2em;
    }



    .new-story-container .new-story-page-content input#story_title {
      font-family: Newsreader, serif;
    }

    div.story-actions a {
      border-radius: 5px;
      border: $primaryYellow solid 1px;
      background-color: $primaryYellow;
      color: white;
      transition: 0.5s;
      box-shadow: 2px 2px 8px #ccc;
      padding: 0.3rem;
    }

    div.story-actions a:hover {
      border: black solid 1px;
      background-color: white;
      color: black;
      transition: 0.5s;
    }

    .story-comments-container {
      display: flex;
      justify-content: center;

      .flex-col {
        flex-direction: column;

        h3, h4 {
          display: flex;
          justify-content: center;
        }

        h3 {
          margin-top: 2em;
        }

        .comments-form {
          label.text.required {
            display: none;
          }

        }
      }
    }

  }
}



// Story NEW
p.new-story-body-field input#file-upload-button {
  background: red;
  display: none;
}


.new-story-container {
  display: flex;
  justify-content: center;

  .new-story-page-content {
    display: flex;
    flex-direction: column;
    width: 50vw;

    h1 {
      display: flex;
      flex-direction: row;
      justify-content: center;
    }

    .story-form {
      width: 100%;
    }

    .story-title-topic-wrapper {
      margin-bottom: 3em;
    }

    trix-editor {
      min-height: 40vh;
    }

    .new-story-col-2 {
      display: flex;
      // justify-content: space-evenly;
      height: 3vh;

      .new-story-dropdown-field {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-top: 1.6em;
      }
    }



    select#story_topic {
      border: none;
      font-size: medium;
      color: #707070;
      font-family: $primaryFont;
    }

    select#story_topic:hover {
      // Add hover fx
    }

    select#story_topic:focus {
      outline: none;
    }

    input#story_title {
      width: 40vw;
      // padding-bottom: 3em;
      // margin-right: 0.4em;
      border: none;
      font-size: 1.8em;
    }

    input#story_title::placeholder {
      font-family: $primaryFont;

    }

    input#story_title:hover {
      // box-shadow: 5px 5px #6e6e6e;
    }

    input#story_title:focus {
      outline: none;
    }

    textarea#story_body {
      height: 35vh;
      width: 100%;
      border: none;
      margin-top: 5em;
      padding-top: 2em;
      font-family: $primaryFont;
      font-weight: normal;
      font-size: 1.1em;
      caret-color: black;
    }

    textarea#story_body::placeholder {
      font-size: 1.5em;
      text-align: center;
      font-family: $primaryFont;
      font-weight: bold;
      width: auto;
    }

    textarea:focus {
      outline: none;
    }
  }

  input[type=file] {
    display: flex;
    justify-content: center;
    font-family: $primaryFont;
    width: fit-content;
    padding: 0.5vw 17vw 0.5vw 17vw;
    margin: 1em auto auto auto;

    background-color: transparent;
    border: none;
    border-radius: 5px;
    box-shadow: 2px 2px 10px #ccc;
    transition: 0.3s;
  }

  input[type=file]:hover {
    background-color: $primaryYellow;
  }

  input[type=submit] {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 3em;
    background-color: transparent;
    border: none;
    border-radius: 5px;
    box-shadow: 2px 2px 10px #ccc;
    transition: 1s;
  }

  input[type=submit]:hover {
    background-color: $primaryYellow;
    transition: 0.5s;
  }

}

// Stories INDEX
.section-heading {
  display: flex;
  justify-content: center;
  margin-top: 3rem;

  .right-word {
    margin: 0 0 0 11px;
  }
  .left-word {
    margin: 0 11px 0 0;
  }
}

.section-heading-container {
  display: flex;
  justify-content: center;
  //margin-bottom: 1em;
}

h1.section-heading {
  font-size: xxx-large;
  //background: linear-gradient(180deg, white 65%, $primaryYellow 65%);
}

.highlight {
  background: linear-gradient(180deg, white 65%, $primaryYellow 65%);
}

.stories-index-container {
  display: flex;
  flex-direction: row;
  justify-content: center;

  .stories-index-content {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    // padding: 0 1.5rem 0 1.5rem;

    .index-stories {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-evenly;

      .story-card {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        margin: 0 0.1rem 2.5rem 0.1rem;
        max-width: 28rem;
        min-width: 15rem;
        box-shadow: 0 0 16px #ccc;
        padding: 1em;
        border-radius: 10px;
        transition: 0.5s;

        a {
          color: #393939;
        }

        .trix-content {
          max-height: 9em;
          overflow: hidden;
          line-height: 1;
          margin-top: 15px;

          color: #6b6b6b;
          transition: 0.5s;

          pre {
            display: none;
          }
        }

        .story-image-header {
          display: flex;
          flex-direction: row-reverse;
          justify-content: flex-end;
          height: 3em;

          .written-by-title {
            margin-top: 0.6em;
          }

          a {
            display: flex;
            margin-top: 1em;
          }

          p {
            vertical-align: center;
          }

          .img-and-avatar {
            display: flex;
            justify-content: flex-start;
          }

          .story-card-thumb-img {
            width: 45px;
            display: flex;
            flex-direction: column;
            justify-content: center;


            img {
              border-radius: 45px;
              height: 40px;
              width: 40px;
              margin-top: 1.5em;
            }

            h3 {
              margin-left: 1em;
            }

            .written-by {
              width: fit-content;
            }
          }
        }

        h3 {
          margin-bottom: 0;
        }

        p {
          max-height: 5em;
          overflow: hidden;
          // margin-top: 0;
        }
      }

      .story-card:hover {
        transform: translateY(-5px);
        transition: 0.5s;
        box-shadow: 5px 5px 20px #ececec;

        .trix-content {
          color: black;
          transition: 0.5s;
        }
      }
    }
  }
}

.hero-line.mid {
  background-color: black;
  height: 1px;
  margin: 2rem 1rem 2rem 1rem;
}

h3.add-a-comment {
  display: flex;
  justify-content: center;
}

input.submit-comment-btn {
  margin-top: 1rem;
  width: 100%;
  border-radius: 5px;
  border: $primaryYellow solid 1px;
  background-color: $primaryYellow;
  color: white;
  transition: 0.5s;
  box-shadow: 2px 2px 8px #ccc;
}

input.submit-comment-btn:hover {
  border-radius: 5px;
  border: black solid 1px;
  background-color: white;
  color: black;
  transition: 0.5s;
  box-shadow: 2px 2px 8px #ccc;
}

.center-2 {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.center-3 {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

// Stories Index Cards


.bookmark-svg {
  height: 23px;
  width: 23px;
  margin: 2em;
  padding: 1em 1em 1.1em 1em;
  box-shadow: 0 0 10px #ccc;
  border-radius: 5px;
  transition: 0.5s;

  path {
    fill: $primaryYellow;
  }
}

.bookmark-svg:hover {
  transform: translateY(-6px);
  transition: 0.7s;
  box-shadow: 5px 5px 20px #ececec;

  path {
    fill: #ffc558;
    transition: 2s;
  }
}

